<resources>

    <string name="app_name">HomeWork</string>

    <string name="_0" translatable="false">0</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>

    <string name="c" translatable="false">C</string>
    <string name="left_hawk" translatable="false">(</string>
    <string name="right_hawk" translatable="false">)</string>
    <string name="del">del.</string>
    <string name="equals" translatable="false">=</string>
    <string name="comma" translatable="false">,</string>

    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="multiply" translatable="false">×</string>
    <string name="divide" translatable="false">÷</string>
    <string name="change_theme">Change theme</string>
    <string name="dark_mode">Dark mode</string>
    <string name="light_mode">Light mode</string>
    <string name="ru">Russian</string>
    <string name="eng">English</string>
    <string name="save">save</string>



</resources>