<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/switchLang"/>


    <TextView
        android:id="@+id/textViewDarkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        app:layout_constraintBottom_toBottomOf="@+id/switchTheme"
        app:layout_constraintEnd_toStartOf="@+id/switchTheme"
        app:layout_constraintTop_toTopOf="@+id/switchTheme"
        style="@style/button"/>

    <TextView
        android:id="@+id/textViewLightMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_mode"
        app:layout_constraintBottom_toBottomOf="@+id/switchTheme"
        app:layout_constraintStart_toEndOf="@+id/switchTheme"
        app:layout_constraintTop_toTopOf="@+id/switchTheme"
        style="@style/button"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTheme"
        app:layout_constraintBottom_toTopOf="@+id/buttonSave"/>

    <TextView
        android:id="@+id/textViewRu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ru"
        app:layout_constraintBottom_toBottomOf="@+id/switchLang"
        app:layout_constraintEnd_toStartOf="@+id/switchLang"
        app:layout_constraintTop_toTopOf="@+id/switchLang"
        style="@style/button"/>

    <TextView
        android:id="@+id/textViewEng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eng"
        app:layout_constraintBottom_toBottomOf="@+id/switchLang"
        app:layout_constraintStart_toEndOf="@+id/switchLang"
        app:layout_constraintTop_toTopOf="@+id/switchLang"
        style="@style/button"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSave"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="onClickSave"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchLang" />
</androidx.constraintlayout.widget.ConstraintLayout>